2007-09-10  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: avoid content elements being defined
	only if they are used inline and the corresponding macro never 
	appeared. Avoid defining variables when there is no target. 
	* Tests/*: add tests for all the DO_CONTENTS/setcontentsaftertitlepage
	and INLINE_CONTENTS combinations when there is no @contents in the
	document.

2007-09-09  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle @\ and matching { } in @math.
	fix simple_style to be really used (typos in texi2html.init).
	* examples/tex4ht.init: use httexi to handle @math, since texinfo
	@-commands are allowed in @math, and httex for @tex.
	* Tests/*: add test for simple_style with a paragraph within.
	more tests for @math.

2007-08-21  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: handle @, command without brace like @,c. 
	Report from Jorge Barros de Abreu.
	* examples/roff.init, texi2html.init: treat @, more like other accent 
	@-commands.
	* Tests/*: more tests for accents and cedillas.
	* Makefile.am: don't write the spec file in $(srcdir).
	* *Makefile.in, configure: regenerate with automake 1.10, and 
	autoconf 2.61.

2007-06-04  Derek Price  <derek@ximbiot.com>

	* configure.ac: Update to version 1.79 for development.

	* Makefile.am: Use $(SHELL) explicitly.
	* configure.ac: Update to version 1.78 for release.

2007-06-01  Patrice Dumas  <dumas@centre-cired.fr>

	* doc/texi2html.texi: update copyright years, clarify that the
	license in comment is the license for texi2html, not for the
	manual.

2007-04-07  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl: when INLINE_CONTENTS is set, 
	the table of contents and short table of contents are output 
	where they are defined, except if setcontentsaftertitlepage is set.
	If setcontentsaftertitlepage is set the contents is associated
	with the title.
	Handle @setcontentsaftertitlepage and @setshortcontentsaftertitlepage.